# eink-weather-display

./: .env.sample  .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
scripts/: build_pi.sh  common.sh  deploy.sh  generate_mock_suite.sh  pi.sh  run_pi.sh
src/: config.rs  display.rs  main.rs  svg_render.rs  template.rs  ui.rs  weather.rs
src/api/: gcalendar.rs  mod.rs  weather.rs
src/model/: calendar.rs  mod.rs  weather.rs
src/panel/: calendar.rs  mod.rs  weather.rs
src/render/: mod.rs  pi.rs  rasterize.rs  template.rs  theme.rs
templates/: badge.svg.j2  calendar_panel.svg.j2  calendar_panel_dark.svg.j2  dashboard-full-template-dark.svg.j2  dashboard-full-template.svg.j2  hourly_panel.svg.j2  icon.svg.j2  metric_card.svg.j2  weather_panel.svg.j2  weather_panel_dark.svg.j2
