[package]
name = "eink-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
resvg = "0.43"
tiny-skia = "0.11"
usvg = "0.43"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
fontdue = "0.9"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = true }
minijinja = "2"

[target.'cfg(target_os = "linux")'.dependencies]
epd-waveshare = "0.6.0"
linux-embedded-hal = "0.4"
